# monorepo

./: .dockerignore  .envrc  .formatter.exs  .gitignore  .mcp.json  .mise.toml  .npmrc  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CLAUDE.ja.md  CLAUDE.md  GEMINI.md  Justfile  LOCAL_PORTS.md  README.ja.md  README.md  Taskfile.yml  WORKFLOW.md  biome.json  biome.json.bak  biome.jsonc  bunfig.toml  devbox.json  dprint.json  flake.nix  lefthook.yml  mise.toml  mix.exs  monorepo.code-workspace  moon.work  package.json  pncat.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  turbo.json  vite.config.ts
.agent/rules/: moonbit-style.md  moonbit-test.md
.agents/: skills-lock.json
.agents/plugins/: marketplace.json
.agents/skills/: components-build-docs  docs-structure  html-doc  moonbit-bestpractice  moonbit-docs
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: typescript-coding-expert.md
.claude/hooks/: check-git-flags.py  check-git-push.py  check-on-push.py  fix-on-write.py
.claude/skills/: adr  components-build-docs  effect-hono  effect-layer  effect-runtime  moonbit-bestpractice  moonbit-docs  totto2727-fp  totto2727-fp.md  vite-plus
.codex/: config.toml
.codex/environments/: environment.toml
.cursor-plugin/: marketplace.json
.factory/: settings.json
.github/workflows/: ci.yaml  deploy-bw.yaml  deploy-c-plugin.yaml  deploy-mdt.yaml  deploy-roadmap.yaml  deploy-sandbox.yaml  deploy-totto2727-fp.yaml  deploy-wt.yaml
.grit/: force-js-extension.grit  grit.yaml
.serena/: project.yml
.sisyphus/plans/: c-plugin-local-source.md  feed-platform-ms-02-completion.md
.sisyphus/run-continuation/: ses_18e9f0dfaffe1gJDiEL60QT1wv.json
.zed/: settings.json  tasks.json
app/lesson-sharing/: .dev.vars.template  .gitignore  .mise.local.template.toml  README.md  biome.json  dprint.json  package.json  tsconfig.json  vite.config.ts  worker.ts  wrangler.jsonc
app/mcp/: .dev.vars.template  .gitignore  .mcp.json  CLAUDE.ja.md  GEMINI.md  Pulumi.production.yaml  README.md  Taskfile.yml  drizzle.config.ts  package.json  tailwind.css  tsconfig.json  vite.config.ts  wrangler.jsonc
app/portal/: .gitignore  Taskfile.yml  drizzle.config.ts  eslint.config.ts  package.json  tailwind.css  tsconfig.json  tsr.config.json  ui.json  vite.config.ts  wrangler.jsonc
app/rss-graphql/: Taskfile.yml  package.json  tsconfig.json  vite.config.ts
app/template/: .gitignore  biome.json  package.json  wrangler.jsonc
archive/lesson-sharing/: .dev.vars.template  .gitignore  dprint.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
doc/adr/: 2026-04-06-c-plugin-cli-tool.md  2026-04-06-c-plugin-command-sync-strategy.md  2026-04-06-c-plugin-skill-target.md  2026-04-09-bw-cli-tool.md  2026-04-09-c-plugin-multi-marketplace.md  2026-04-25-bash-command-guard-hook.md  2026-04-25-vp-script-glob-and-find.md
docker/: saas-example.Dockerfile  sandbox-base.Dockerfile
docs/: coding-rules.md  coding-standards.md  database-patterns.md  error-handling.md  import-export-conventions.md  layer-patterns.md  naming-conventions.md  schema-patterns.md  typescript-conventions.md  ultracite.md
docs/adr/: 2026-04-06-c-plugin-cli-tool.md  2026-04-09-bw-cli-tool.md  2026-04-09-c-plugin-test-strategy.md  2026-04-16-c-plugin-recursive-sync-and-gitignore.md  2026-04-24-artifact-driven-agent-workflow-plugin.md  2026-04-25-vp-script-glob-and-find.md  2026-04-26-dev-workflow-qa-design-step.md  2026-04-26-dev-workflow-rename-and-flatten.md  2026-04-29-external-review-absorbs-self-review.md  2026-04-29-researcher-project-skill-inventory-deferral.md  2026-04-29-roadmap-strategic-layer.md  2026-05-03-pr-and-ci-roadmap-observability.md  2026-05-04-totto2727-coding-plugin-consolidation.md  2026-05-05-identity-provider-and-authn-authz-architecture.md  2026-05-18-c-plugin-local-source-support.md  2026-05-21-magic-link-token-and-email-delivery.md  2026-05-21-passkey-implementation-library.md  2026-05-21-session-strategy.md  2026-05-24-feed-platform-auth-provider.md  2026-05-24-feed-platform-cross-app-session-strategy.md  2026-05-24-feed-platform-magic-link-strategy.md  2026-06-28-elixir-opencode-client-req-server-sent-events-adoption.md  2026-07-20-consolidate-development-guidance-in-coding-plugin.md
docs/report/: 2026-06-05-c-plugin-lock-and-skill-path-resolution.md
docs/retrospective/: 2026-04-29-add-dev-roadmap-skill.md  2026-04-29-retro-cleanup.md  2026-05-03-pr-ci-integration.md  2026-05-04-totto2727-coding-plugin.md  2026-05-10-language-policy-temporary-output.md  2026-05-11-bw-effect-undici-content-length.md  feed-platform-ms-01-shared-libraries.md  feed-platform-ms-01-workspace-foundation.md  feed-platform-ms-02-auth-passkey-magiclink.md
docs/worktree/: TOT-23-platform-auth-current-design.md
elixir/: .formatter.exs  mix.exs
elixir/opencode_client/: Justfile  README.md  mix.exs  opencode-openapi.json  package.json
elixir/symphony/: AGENTS.md  Justfile  LICENSE  NOTICE  README.md  WORKFLOW.md  mix.exs  package.json
elixir/symphony_elixir/: .gitignore  AGENTS.md  Justfile  NOTICE  README.md  WORKFLOW.md  mix.exs  package.json
go/: AGENTS.md
infra/: GEMINI.md  Justfile  README.md
infra/aws/: Pulumi.production.yaml  Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
infra/cloudflare/: README.md  (+6 more)
js/: AGENTS.md  package.json
mbt/: AGENTS.md  flake.nix
nix/: .gitignore  Justfile  package.json  vite.config.ts
package/: GEMINI.md
patches/: @better-auth__kysely-adapter@1.6.12.patch  casbin@5.39.0.patch
plugins/totto2727/skills/rust-cli/templates/: Cargo.toml  main.rs  spinner.rs
sandbox/: Dockerfile  Justfile  docker-compose.yml  gateway.toml  policy.yaml  sandbox-base.Dockerfile  sandbox-dev.Dockerfile  sandbox-monorepo.Dockerfile
template/: README.md  package.json  tsconfig.json
(+2658 files in other folders)
