[package]
name = "my-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation (optional, for value-range constraints)
garde = { version = "0.20", features = ["derive"] }

# Errors (single stack: thiserror for enum definition + miette for diagnostics)
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# Date / time
jiff = { version = "0.1", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lightweight CLI UI (single-purpose crates; combine as needed)
inquire = "0.7"
indicatif = "0.17"

# Advanced declarative UI (uncomment only when full-screen TUI is required)
# tui-realm = "2"
# ratatui = "0.29"

# Filesystem helpers
camino = { version = "1", features = ["serde1"] }

[dev-dependencies]
pretty_assertions = "1"
insta = "1"
mockito = "1"
tempfile = "3"
